--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -1,55 +1,195 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>川普宾州集会有人开枪 视频显示脸上有血</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【更新”川普宾州集会右耳中枪 枪手被击毙</h2>
+///image2=
 <h6></h6>
 <hr>
-	<p>【大纪元2024年07月14日讯】（大纪元记者林燕报导）周六（7月13日）下午6点多，前美国总统川普（特朗普）在州巴特勒的集会现场，有人开枪。川普被带离现场，有记者团的消息称，他脸上有血。</p>
-<p>前总统川普被特勤人员匆忙带离舞台。多家媒体的联合报道说，在特勤局特工冲向川普之前，他们听到了“一连串巨大的爆炸声或巨响”。</p>
-<p>“特勤局立即赶到现场报道川普总统，”据联合报道。“随后，记者听到了爆炸声。”</p>
-<p>“特工抓住了川普，他挥舞着拳头，”联合报道补充道。</p>
-<p>从现场视频看，在子弹声响起后，川普用右手似乎抚摸头部，随后卧倒在讲台下。特勤局特工匆忙赶上舞台，并将他护送离开。</p>
-<p>CNN等多家媒体的记者群中说，保安人员将川普扶了起来，川普脸上有血。</p>
-<p>事件发生在他登上集会舞台后不久。</p>
-<p>“我们听到了一堆……巨大的爆裂声。一开始我以为：那是烟花吗？突然间，每个人都开始尖叫，”CNN的 阿莱娜·特里尼（Alayna Treene）在集会现场报道说。</p>
-</p>
+	<p>【大纪元2024年07月14日讯】（大纪元记者林燕报导）周六（7月13日）下午6点多，前美国总统川普（特朗普）在宾夕法尼亚州巴特勒的集会现场，有人开枪。川普被带离现场，他脸上有血。</p>
+<p>前总统川普被特勤人员匆忙带离讲台。多家媒体共享的记者群发出信息说，在特勤局特工冲向川普之前，他们听到了“一连串巨大的爆炸声或巨响”。</p>
+<p>“特勤局立即赶到现场护住川普总统，”信息说。“随后，记者听到了爆炸声。”</p>
+<p>“特工护送川普离开，他挥舞着（招牌式）拳头，”消息补充道。</p>
+<p>从现场视频看，在子弹声响起后，川普用右手似乎抚摸头部，随后卧倒在讲台下。特勤局特工匆忙赶到舞台，并将他护送离开。</p>
+<p>事件发生在他登上集会讲台后不久。</p>
 <p><center><a title="Shots Fired at Trump Rally in Butler, Pennsylvania" src="https://www.ganjingworld.com/embed/1gt526j31t52vHaBSVmhfLdMZ1pn1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
-<p>责任编辑：孙芸</p>
+<h2>要点：</h2>
+<p><strong><ahref="#_Toc2024071301">川普：子弹穿透右耳上部 听到嗖嗖的枪声</a></strong><br />
+<strong><ahref="#_Toc2024071302">拜登发表讲话 美国不应允许这种暴力</a></strong><br />
+<strong><ahref="#_Toc2024071303">佩洛西：感谢上帝让川普平安</a></strong><br />
+<strong><ahref="#_Toc2024071304">警方：枪手在一栋办公楼屋顶上 在安全范围以外</a></strong><br />
+<strong><ahref="#_Toc2024071305">川普竞选团队：期待与民众相聚密尔沃基大会</a></strong></p>
+<p>以下为实时更新。</p>
+<h2>急诊室医生现场帮助救治一名受害者</h2>
+<p>一位衬衫上沾满鲜血的目击者接受CBS采访时透露，他是一名急诊室医生，有在集会现场对一名头部受伤的伤者进行心肺复苏术。</p>
+<p>“我听到了枪声。我以为是鞭炮声，”他说。“然后那边有人尖叫着喊，他中枪了。”</p>
+<p>然后他走过去帮助伤者。他说，伤者头部中枪，留了很多血。</p>
+<p>一架医疗直升机很快接走了受害者，送往匹兹堡的阿勒格尼综合医院。不久后，另一架直升机带着运输机降落。随后，一辆挂着警灯的黑色SUV停在直升机停机坪旁。</p>
+<p>医院后来证实，收治了两名重伤患者。</p>
+<h2>目击者近距离看到川普被击中 “太可怕了”</h2>
+<p>一名目击者麦迪逊·布鲁克斯（Madison Brooks）接受CBS新闻采访时说，他离川普大约五英尺远，距离川普很近。</p>
+<p>“突然间我听到了四声枪响，每个人都尖叫着‘躺下’，可以看到他（指川普）脸上溅满了血。”布鲁克斯说。“特勤局很快围住了他。这太可怕了。”</p>
+<h2>神父：是上帝介入 救了川普一命</h2>
+<p>美国优先政策研究所（The America First Policy Institute）于周六晚间为川普举行了一次在线祈祷守夜活动。</p>
+<p>几位宗教领袖在祈祷中表示，毫无疑问，是上帝介入，救了川普一命。</p>
+<p>“为生命祈祷”（Priests for Life）的弗兰克·帕沃内神父在祈祷中说，“今晚的事件是为了吓唬我们、恐吓我们、让我们沉默。……我们不会沉默。我们不会以任何方式、形式被阻止。”</p>
+<h2>众议院计划举行听证会</h2>
+<p>特勤局已同意向众议院监督委员会通报今晚川普集会枪击事件的情况。</p>
+<p>该委员会还计划就此事件举行听证会，并传唤特勤局局长出庭作证。</p>
+<h2>警方：枪手在一栋办公楼屋顶上 在安全范围以外</h2>
+<p>巴特勒县地方检察官理查德·戈尔丁格（Richard Goldinger ）说，枪手在一栋办公楼的屋顶上，该办公楼不在集会活动的安全范围之内。他没有透露跟枪手身份有关的任何细节。</p>
+<p>距离川普集会最近的一栋建筑属当地的一家名为AGR International的制造业公司。</p>
+<p>该公司的一位高管周六晚间表示，公司事先就安全问题与当地警方有进行合作。警方封锁了该公司停车场的公共通道，该停车场可供执法部门使用。</p>
+<h2>消息：枪手使用AR步枪 从逾200英尺外射击</h2>
+<p>CBS新闻引述执法部门的消息说，嫌疑人用AR式步枪在200-300英尺外朝川普射击。</p>
+<p>执法部门消息人士称，枪手当时待在特勤局设立的安全警戒线外的一个棚屋顶上。</p>
+</p>
+<p>&nbsp;</p>
+<blockquote class="twitter-tweet">
+<p dir="ltr" lang="en">Our former President showed tremendous grace and courage under literal fire tonight. So thankful for his safety and so sad for the victims and their families.</p>
+<p>— Jeff Bezos (@JeffBezos) <ahref="https://twitter.com/JeffBezos/status/1812315786507088370?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
+<h2>贝佐斯：川普表现出极大的风度和勇气</h2>
+<p>亚马逊CEO杰夫·贝佐斯（Jeff Bezos）在X上推文说：“我们的前总统今晚在面对真的弹火时表现出了极大的风度和勇气。非常感谢他平安无事，也为受害者及其家人感到难过。”</p>
+<h2>拜登与川普通话</h2>
+<p>白宫官员称，拜登总统周六晚与川普通话。</p>
+<p>拜登还与宾夕法尼亚州州长乔什·夏皮罗（Josh Shapiro）和宾夕法尼亚州巴特勒市市长鲍勃·丹多伊（Bob Dandoy）进行了交谈。</p>
+<p>白宫官员称，总统将于周日上午收到国土安全部和执法官员的最新简报。</p>
+<p>根据更新后的日程，拜登总统将在周六晚离开特拉华州雷霍博斯并返回白宫。</p>
+<h2>FBI负责调查此案</h2>
+<p>美国联邦调查局在一份声明说，他们已负责调查此案，承担主要联邦执法机构的角色，调查今天早些时候在宾州巴特勒发生的针对前总统川普的事件。</p>
+<p>声明说，“FBI匹兹堡办公室的特工，包括危机应急团队和证据应急技工都有快速反应。我们将继续提供全部资源支持这项调查，并与美国特情局和州及当地执法部门合作。”</p>
+<p>FBI呼吁知情民众拨打电话提供更多信息。</p>
+<p><a name="_oc2024071304"></a></p>
+<h2>川普竞选团队：期待与民众相聚密尔沃基大会</h2>
+<p>根据川普竞选团队和共和党全国委员会发出的一份联合声明，川普期待与民众一起参加密尔沃基（Milwaukee）共和党全国代表大会，提名他担任美国第47任总统。</p>
+<p>共和党将于7月15日在密尔瓦基举行全国代表大会，正式提名党内候选人。</p>
+<p>川普还没有正式公布他的竞选搭档。川普在8日接受福克斯新闻透露，他的竞选搭档将是一个“当总统也能表现出色的人”，以及“能帮助你当选的人，这毫无疑问”。</p>
+<p>他有提到参议员万斯（JD Vance）、卢比奥（Marco Rubio）、斯科特（Tim Scott）和北达科他州州长诺姆（Kristi Noem）。</p>
+<h2>消息：执法部门进行暗杀未遂调查</h2>
+<p>CBS新闻引述执法部门知情人士的消息称，枪击案正在被定性为暗杀未遂进行调查。</p>
+<p>美东时间晚9点多，有社交媒体用户上传川普车队离开医院的视频。</p>
+<p><center><a title="突发：川普宾州集会中枪，特勤局称川普安全，枪手已毙，现场采访（1）｜ #新唐人电视台" src="https://www.ganjingworld.com/zh-TW/embed/1gt59co5uvt3ksm2UeA1jc8Rt1bo1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<h2>多位目击者表示看到枪手</h2>
+<p>目击者加里·奥多诺霍（Gary O&#8217;Donoghue）告诉英国BBC，他在川普发表讲话大约“五到七分钟”后，看到一名男子带着步枪爬上了旁边的一处屋顶。</p>
+<p>他说：“我们注意到一个男人爬上……在我们旁边建筑物的屋顶上，距离我们50英尺。</p>
+<p>“我们指着爬上屋顶的那个人，”他描述了当时他和朋友们试图提醒执法人员注意该男子。</p>
+</p>
+<p><center><a title="突发：川普宾州集会中枪，特勤局称川普安全，枪手已毙，现场采访（2）｜ #新唐人电视台" src="https://www.ganjingworld.com/zh-TW/embed/1gt59oobe5k7DG4ryEmMB5OY71iv1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p>大纪元姐妹媒体新唐人电视台记者在现场采访，多位民众表示，他们看到了枪手藏身的地方。</p>
+<p>CBS援引两名执法部门的消息人士的话称，袭击者手持步枪，站在集会现场被封锁的区域外，距离川普大约180米。</p>
+<p>官员们表示，嫌疑人站在一个“高架结构”上，之后被美国特勤局反突击小组的一名成员击毙。</p>
+<p><a name="_oc2024071301"></a></p>
+<h2>川普：子弹穿透右耳上部 听到嗖嗖的枪声</h2>
+<p>川普在“真相传媒”（Truth Social）上发表一份声明说，子弹穿透了他的右耳上部，感到皮肤被撕裂。</p>
+<p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
+<p>“在我们国家发生这样的事情真是难以置信。</p>
+<p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://dlp02mn13eakq.cloudfront.net/B5vpozeZs"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
+<h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
+<p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
+<p>古列尔米在一份声明中说：“我们感谢特勤局团队和我们的执法伙伴迅速采取行动。我们向受这场悲剧影响的家庭表示慰问。</p>
+<p>“这起枪击事件发生在周六晚6:15，一名疑似枪手从集会地点外的某高处朝会场舞台方向连发数枪。特勤局还击了枪手，枪手已死。</p>
+<p>“特勤局迅速采取保护措施，前总统川普平安，并在接受（身体）检查。（另外，）一名现场集会民众被杀，两人受重伤。目前该事件正在调查中，特勤局已经通知联邦调查局。”</p>
+<h2>多名执法部门确认：枪手在集会场馆外</h2>
+<p>三位执法部门消息来源确认，枪手在川普集会的场馆外。</p>
+<p>其中两位消息来源表示，枪手位于场馆外的一个屋顶上。多名执法部门消息来源称，这个人是狙击手，其它细节尚不清楚。</p>
+<p>布特勒县地区检察官理查德·戈尔丁格（Richard Goldinger）表示，他的首席侦探告诉他，枪手当时待在相邻的建筑上。</p>
+<p>他说，枪手可能使用步枪，“（射击）距离有几百码”。</p>
+<p>联邦调查局在一份声明中表示，他们已经到达现场，并与特勤局合作进行此次调查。</p>
+<h2>检察官：枪手已死</h2>
+<p>美东时间晚7:46左右，布特勒县地区检察官告诉美联社，枪手已死亡。一名在集会中的旁观者也已死亡。</p>
+<p>川普正在医疗机构接受评估，他目前“情况良好”。</p>
+<p>美联社报导说，执法官员表示，川普被枪击事件被定性为针对共和党候选人的暗杀企图。</p>
+<p>两位官员选择匿名，参与了正在进行的这起调查讨论。</p>
+<p>官员表示，枪手不是参加集会的民众，枪手已被美国特勤局特工击毙。<br />
+<a name="_oc2024071302"></a></p>
+<h2>拜登发表讲话 美国不应允许这种暴力</h2>
+<p>总统拜登在特拉华州就川普遇刺事件发表讲话，他表示，联邦机构正在参与调查这次事件。</p>
+<p>“美国不应该容忍这种暴力。这太糟糕了。太糟糕了。”拜登说，他计划在发表讲话后与川普通话。</p>
+<p>拜登表示，他曾试图在发表讲话前与川普交谈，但无法打通川普的电话。</p>
+<p>“我希望今晚能和他（川普）谈谈。”拜登说。</p>
+<p>一名记者问，拜登是否认为这次枪击是一次暗杀企图。</p>
+<p>“我想确保我们掌握所有事实（再做评论）。”他说道。</p>
+<h2>拜登：川普与他的医生在一起 情况良好</h2>
+<p>拜登补充说，川普现在和他的医生在一起，看起来情况良好。</p>
+<p>“这也是我们必须团结这个国家的原因之一。”他说，“我们不能允许这种事情发生。我们不能这样下去，不能纵容这种行为。”</p>
+<p>拜登竞选团队表示，在川普集会发生枪击事件后，拜登竞选团队暂停向支持者发送所有信息，并正在努力尽快撤下所有电视广告。</p>
+<h2>拜登：很高兴听到川普平安</h2>
+<p>民主党总统候选人、美国总统拜登在一份<ahref="https://www.whitehouse.gov/briefing-room/statements-releases/2024/07/13/statement-from-president-joe-biden-6/">声明</a>中说，他已听取了川普在宾州集会枪击事件的简报。</p>
+<p>“很高兴听到他平安和无恙。我为他和家人以及参与集会的所有人祈祷，并等待进一步的信息。”声明说。</p>
+<p>“（第一夫人）吉尔和我对特勤局保护川普的安全行动表示感谢。这种暴力在美国没有立足之地。我们必须作为一个国家团结起来，并（对此）予以谴责。”拜登说。</p>
+<p><a name="_Toc2024071316003"></a></p>
+<h2>佩洛西：感谢上帝让川普平安</h2>
+<p>前美国众议院议长南希·佩洛西（Nancy Pelosi）表示，自己正在为川普祈祷。</p>
+<p>佩洛西在X平台上写道，自己的家庭曾经是政治暴力受害者。一名男子为了寻找佩洛西，用锤子闯入她家中，导致她丈夫遭到攻击。</p>
+<p>“我深知任何形式的政治暴力，在我们的社会中都没有立足之地。”佩洛西写道，“感谢上帝，让前总统川普平安。”</p>
+<p>佩洛西还说，她也在为所有参加集会者祈祷。</p>
+<h2>川普长子：川普精神很好 遇刺事件不会吓住他</h2>
+<p>美东时间晚8点，川普长子小唐纳德告诉ABC新闻，他已经和川普通过电话，目前川普仍在医院。</p>
+<p>小唐纳德说，他的父亲“精神很好”，目前仍在接受观察。他补充说，他的父亲“永远不会停止（战斗）”。</p>
+<h2>纽约市警察局加强对川普大厦等地点的巡逻</h2>
+<p>前总统川普在周六宾州巴特勒的集会中受伤后，纽约市警察局正在加强对川普大厦及其它敏感地点的巡逻。</p>
+<p>根据纽约市市长埃里克·亚当斯的发言人说，市长已经听取了事件的简报。纽约市警察局也将在华尔街40号、福利广场和市政厅加强安保。</p>
+<p>尽管川普很少访问川普大厦。但多年来这里一直是川普支持者和反对者的聚集地。</p>
+<h2>黑利：每个热爱自由的美国人都感到震惊</h2>
+<p>前南卡罗来纳州州长妮基?黑利（Nikki Haley）谴责政治暴力。</p>
+<p>“这应该让每个热爱自由的美国人感到震惊。对总统候选人的暴力行为绝不能正常化。我们正在为唐纳德·川普、整个川普家族和所有在场的人祈祷。”她在X平台上的一篇帖子中写道。</p>
+<h2>国际领袖表态纷纷支持川普</h2>
+<p>多位国际领袖在社交媒体上发表讯息，支持川普。</p>
+<p>以色列总理本雅明·内塔尼亚胡说：“萨拉和我对川普总统的显然遭遇袭击感到震惊。我们为他的安全和快速康复祈祷。”</p>
+<p>洪都拉斯总统西奥马拉·卡斯特罗·德·塞拉亚<span class="s1">（</span><span class="s2">Xiomara Castro de Zelaya</span><span class="s1">）</span>说：“暴力会引发更多暴力。我对美国选举过程中发生的事情感到遗憾，（我）与川普总统团结一致。”</p>
+<p>匈牙利总理维克多·奥尔班：“在这黑暗时刻，我的思想和祈祷与川普总统同在。”</p>
+</p>
+<p>&nbsp;</p>
+<blockquote class="twitter-tweet">
+<p dir="ltr" lang="en">An incident occurred the evening of July 13 at a Trump rally in Pennsylvania. The Secret Service has implemented protective measures and the former President is safe. This is now an active Secret Service investigation and further information will be released when available.</p>
+<p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812256378616201726?ref_src=twsrc%5Etfw">July 13, 2024</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
+<h2>特勤局：川普是安全的</h2>
+<p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）称，川普是安全的。</p>
+<p>古列尔米在一份声明中说：“7月13日晚，在宾州的川普集会上发生了一起（枪击）事故。特勤局已实施保护措施，前总统是安全的。特勤局目前正在积极调查此事，如有进一步信息，我们将及时发布。”</p>
+<h2>川普发言人：川普没事</h2>
+<p>川普发言人Steven Cheung表示，川普没事。</p>
+<p>Cheung在一份声明中表示：“川普总统感谢执法部门和急救人员在这次令人发指的袭击中采取的迅速行动。他没事，他正在当地一家医疗机构接受检查。更多细节将陆续公布。”</p>
+<h2>拜登听取川普集会事件的初步简报</h2>
+<p>据白宫称，总统乔·拜登已收到有关前总统川普在宾州集会上发生的事件的初步简报。</p>
+<h2>卢比奥：为川普和参加集会的人祈祷</h2>
+<p>可能成为川普竞选伙伴的佛罗里达州联邦参议员马可·卢比奥（Marco Rubio）说，“为川普总统和今天参加宾州集会的所有人祈祷。”</p>
+<h2>斯科特谴责枪击事件 称是对川普的暗杀企图</h2>
+<p>佛罗里达州另一位联邦参议员里克·斯科特（Rick Scott）说，“这显然是对川普总统的暗杀企图。我很高兴他看起来没事，我为他和所有参加集会的人祈祷。（我们）对暴力零容忍。我希望这个妖魔（Monster）已经被抓住并受到法律的最大程度的起诉。”</p>
+<p>责任编辑：孙芸#</p>
 	
+<hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/10/n14177584.md#1">野火警告：亚省2024年春季将面临极端危险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288298.md#1">卑诗全省范围内篝火禁令本周五生效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288990.md#1">加州今年以来野火数量减少 但面积增大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289027.md#1">灭火成本攀升 野火预防成加州消防重点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289801.md#1">消息：马斯克向川普竞选团队捐款</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289911.md#1">美国大选前 Meta取消川普脸书与IG限制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290066.md#1">【时事金扫描】中共被下通牒？共军现阿拉斯加</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289950.md#1">法轮功反迫害25周年 西人学员雕塑“斩赤龙”</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290252.md#1">川普期待参加共和党大会 据报他已出院</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290250.md#1">拜登在枪击事件后与川普通话 将提前返白宫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/13/n11449283.md#1" target="_blank">袁斌：巫宁坤们的遭遇告诉后人什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286821.md#1">【晚间新闻】美国会议长：推动全面抗中共法案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286981.md#1">【菁英论坛】冲击人类多方面 AI发展遇瓶颈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287904.md#1">【时事金扫描】北京玩一石几鸟 北约瞄准亚太</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285774.md#1">躺不平卷不动 中国多地出现“青年养老院”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282494.md#1">2024年最好的14款日本车 本田思域居首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284641.md#1">抢先看 苹果新一代iPhone16带来何种变化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286463.md#1">孙俪自曝被夸“天选打工人” 帖文引两极论战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287232.md#1">武打明星钱小豪被传疾病缠身 暴瘦近照曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286087.md#1">《加菲猫：农场大冒险》优于旧作 7月线上发行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285855.md#1">《神偷奶爸4》北美票房登冠 《脑筋急转弯2》让位</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286090.md#1">Lia将重启活动 直播落泪感谢ITZY成员与粉丝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264016.md#1">午觉睡太久 小心失智 心血管疾病上身！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286686.md#1">考场天花板很高 竟会让学生考试成绩变差？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285431.md#1">10方法升级玉米罐头 轻松享有粗粮美食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/13/n14290118.htm">川普宾州集会有人开枪 视频显示脸上有血</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/13/n14290118.htm">【更新”川普宾州集会右耳中枪 枪手被击毙</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
